25 August 2009: Wouter
	- fixup memleak in trust anchor unsupported algorithm check.
	- iana portlist updated.
	- autotrust options: add-holddown, del-holddown, keep-missing.
	- autotrust store revoked status of trust points.
	- ctime_r compat definition.
	- detect yylex_destroy().

24 August 2009: Wouter
	- cleaner memory allocation on exit. autotrust test routines.
	- free all memory on program exit, fix for ssl and flex.

21 August 2009: Wouter
	- autotrust: debug routines. Read,write and conversions work.

20 August 2009: Wouter
	- autotrust: save and read trustpoint variables.

19 August 2009: Wouter
	- autotrust: state table updates.
	- iana portlist updated.

17 August 2009: Wouter
	- autotrust: process events.

17 August 2009: Wouter
	- Fix so that servers are only blacklisted if they fail to reply 
	  to 16 queries in a row and the timeout gets above 2 minutes.
	- autotrust work, split up DS verification of DNSKEYs.

14 August 2009: Wouter
	- unbound-control lookup prints out infra cache information, like RTT.
	- Fix bug in DLV lookup reported by Amanda from Secure64.
	  It could sometimes wrongly classify a domain as unsigned, which
	  does not give the AD bit on replies.

13 August 2009: Wouter
	- autotrust read anchor files. locked trust anchors.

12 August 2009: Wouter
	- autotrust import work.

11 August 2009: Wouter
	- Check for openssl compatible with gost if enabled.
	- updated unit test for GOST=211 code.
	  Nicer naming of test files.
	- iana portlist updated.

7 August 2009: Wouter
	- call OPENSSL_config() in unbound and unit test so that the
	  operator can use openssl.cnf for configuration options.
	- removed small memory leak from config file reader.

6 August 2009: Wouter
	- configure --enable-gost for GOST support, experimental
	  implementation of draft-dolmatov-dnsext-dnssec-gost-01.
	- iana portlist updated.
	- ldns tarball updated (with GOST support).

5 August 2009: Wouter
	- trunk moved to 1.3.4.

4 August 2009: Wouter